--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 	<link rel="stylesheet" href="styles.css">
-	<link rel="ikon" href="image/logo.jpeg" type="image/icon type">
+	<link rel="icon" href="image/logo.jpeg" type="image/icon type">
     <style>
         .carousel-item img {
             width: 58%; /* Mengubah lebar gambar menjadi 50% */
