--- a/index.html
+++ b/index.html
@@ -272,6 +272,13 @@
 			color: #003366;
         }
 		
+		p {
+            font-size: 16px;
+            margin-bottom: 20px;
+            text-align: justify;
+			color: #003366;
+        }
+		
 		h2 {
             font-size: 30px;
             margin-bottom: 20px;
@@ -312,7 +319,7 @@
                         <a class="nav-link" href="#infus">Infus&nbsp;Imunne&nbsp;Booster</a>
                     </li>
 					 <li class="nav-item">
-                        <a class="nav-link" href="#kitanan">Khitanan&nbsp;Modern</a>
+                        <a class="nav-link" href="#khitanan">Khitanan&nbsp;Modern</a>
                     </li>
                 </ul>
             </div>
@@ -450,7 +457,7 @@ Perawatan Luka dengan Teknologi Modern
     </div>
 	<br><br>
 	
-	<div id="khitan" class="container mt-5">
+	<div id="khitanan" class="container mt-5">
         <div class="row">
             <div class="col-md-8 offset-md-2 content-boxa">
                 <h1 class="text-center">Khitanan Moderen</h1>
@@ -506,6 +513,7 @@ Perawatan Luka dengan Teknologi Modern
             <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
             <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
 			 <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3" aria-label="Slide 4"></button>
+			 <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="4" aria-label="Slide 5"></button>
         </div>
         <div class="carousel-inner">
             <div class="carousel-item active">
@@ -533,6 +541,13 @@ Perawatan Luka dengan Teknologi Modern
                 <img src="image/gambar4.jpeg" class="d-block" alt="Slide 4">
 				<div class="carousel-caption d-none d-md-block">
 					<h2>Pemasangan Ketater</h2>
+					
+				</div>
+            </div>
+			 <div class="carousel-item">
+                <img src="image/khitanan.jpeg" class="d-block" alt="Slide 4">
+				<div class="carousel-caption d-none d-md-block">
+					<h2>Khitanan Moderen</h2>
 					
 				</div>
             </div>
