--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             margin-left: auto; /* Memastikan gambar berada di tengah */
             margin-right: auto; /* Memastikan gambar berada di tengah */
             display: block; /* Mengatur gambar menjadi blok untuk alignment */
-            border: 5px solid #ddd; /* Menambahkan bingkai dengan warna abu-abu muda */
+            border: 2px solid white; /* Menambahkan bingkai dengan warna abu-abu muda */
             border-radius: 10px; /* Membuat sudut bingkai melengkung */
         }
 
