--- a/index.html
+++ b/index.html
@@ -578,7 +578,7 @@ Perawatan Luka dengan Teknologi Modern
     </header> -->
     
     <!-- Ikon WhatsApp di pojok kanan bawah -->
-    <a href="https://wa.me/6281299467172" class="whatsapp-float" target="_blank">
+    <a href="https://wa.me/6281299467172?text=Halo%20saya%20ingin%20bertanya%20tentang%20layanan%20Anda" class="whatsapp-float" target="_blank">
         <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="WhatsApp">
     </a>
 
