--- a/index.html
+++ b/index.html
@@ -381,7 +381,7 @@
             <div class="col-md-8 offset-md-2 content-boxa">
                 <h1 class="text-center">Pemasangan Ketater</h1>
 				<br><br>
-                <img src="image/gambar4.jpeg"  alt="Pemasangan Ketater" height="400px">
+                <img src="image/gambar4.jpeg"  alt="Pemasangan Katater" height="400px">
                 <br>
 				<br>
 				<p class="text-justify">Kateter adalah sebuah tabung fleksibel yang digunakan untuk berbagai tujuan, seperti mengalirkan cairan ke dalam atau keluar dari tubuh.</p>
