--- a/index.html
+++ b/index.html
@@ -453,7 +453,7 @@ Perawatan Luka dengan Teknologi Modern
     Meningkatkan daya tahan tubuh,
     Mengurangi risiko infeksi,
     Mempercepat pemulihan setelah sakit, dan
-    Menambah energi dan mengurangi kelelahan</p>
+    Menambah energi dan mengurangi kelelahan.</p>
              
                 
             </div>
