--- a/index.html
+++ b/index.html
@@ -343,7 +343,7 @@
 			</div>
 			<div class="card">
 				  <h5>Modern</h5>
-							<h3>Menggunakan teknologi terbaru untuk pengalaman terbaik.</h3>
+							<h3>Menggunakan metode terbaru untuk pengalaman terbaik.</h3>
 			</div>
 			<div class="card">
            <h5>Terpercaya</h5>
